
  [BUG FIXES]

  * OperaArguments.merge() will now return a reference to it self.
    (andreastt)

  * OperaRunnerSettings.setBinary() now accepts java.io.File as the
    default argument.  (andreastt)

  * Recompiled ecmascript service protocols to facilitate CORE-36517,
    fixes SPARTAN-1165.  (andreastt)

  * Facilitate connecting to a remote host, addresses OPDRV-152.
    (andreastt)

  * Remove a redundant cast.  (hansd)

  * AbstractEventHandler turned into an interface, and EventHandler
    into an actual abstract class.  Fixes inconsistencies.  (andreastt)

  * Renamed AbstractEventHandler to ScopeEventHandler (implementation)
    and removed STP/0 support.  (andreastt)

  * Unspecified type for field shuttingDown in ScopeServices.
    (andreastt)

  * Removed temporary fix for CORE-33057.  (andreastt)

  * We were not respecting implicit waits, removing unused EXEC_SLEEP
    workaround.  (andreastt)

  [TESTS]

  * Major refactoring of test setup.  (andreastt)

  * Introducing annotation FreshDriver for forcing a driver restart.
    (andreastt)

  * In-process web server for tests (much like Selenium's).
    (andreastt)

  * Introduced OperaDriverBuilder and various OperaDriverSuppliers
    for use in SpartanRunner and for testing.  (andreastt)

  * Added methods toString() and toList() to OperaIntervals for
    debugging purposes.  (andreastt)

  * Added test for specifying launcher from capabilities.  (andreastt)

  [OTHER]

  * Protocol files no longer have version numbers in filenames,
    resolves OPDRV-154.  (andreastt)

  * Printing warnings when compiling OperaDriver.  (hansd)

  * Removed old getting started examples, relocated remote example.
    (andreastt)

  * Various fixes for documentation.  (andreastt)


v0.10     (2012-01-24)

  [API CHANGES]

  * Added short-hand ScopePreference.reset() method for resetting a
    single preference.  (andreastt)

  * OperaDriver.preferences().* now returns a ScopePreference so that